# esp32-heating-junkers

./: .gitignore  Cargo.toml  build-ota.sh  build.rs  partitions.csv
.cargo/: config.toml
src/: defmt_via_tcp.rs  display_handling.rs  heating.rs  homematic.rs  lib.rs  ota.rs
tests/: hello_test.rs
