[package]
edition      = "2024"
name         = "hzg-roon-junkers"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "hzg-roon-junkers"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name    = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }

esp-rtos = { version = "0.1.1", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c6"] }

embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "dhcpv4-hostname",
  "dns",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embedded-hal-bus = { version = "0.3.0" }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
esp-radio = { version = "0.16.0", features = [
  "defmt",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

base64         = {version = "0.22.1", default-features =  false, features = [] }
critical-section = "1.2.0"
rand_core       = "0.9.3"
static_cell      = "2.1.1"

mipidsi = "0.9.0"
axs5106l = "0.1.0"

toml-cfg = "0.2.0"

jiff = {version="0.2.15", default-features = false, features = ["alloc", "static"] }

#reqwless = { version = "0.13", default-features = false, features = ["defmt", "esp-mbedtls"], git="https://github.com/ImplFerris/reqwless", branch="esp-hal-1.0.0" }
esp-mbedtls = { version="0.1", git="https://github.com/mbehr1/esp-mbedtls", features=["esp32c6", "async"]}
reqwless = { version = "0.13", default-features = false, features = ["defmt", "esp-mbedtls", "alloc"], git="https://github.com/mbehr1/reqwless", branch = "fix/defmt_esp-mbedtls"}
embedded-nal-async = "0.8.0"

serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
heapless = "0.9.1"
core-json = "0.4.0"
embedded-websocket = {version = "0.9.4", default-features = false }

# Force reqwless to use your esp-mbedtls fork
[patch."https://github.com/esp-rs/esp-mbedtls"]
esp-mbedtls = { git = "https://github.com/mbehr1/esp-mbedtls" }
esp-mbedtls-sys = { git = "https://github.com/mbehr1/esp-mbedtls" }

[dev-dependencies]
embedded-test = { version = "0.7.0-alpha.3", git = "https://github.com/probe-rs/embedded-test", branch = "next", features = [
  "defmt",
  "embassy",
  "external-executor",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
