[package]
edition      = "2024"
name         = "esp32-heating-junkers"
rust-version = "1.92"
version      = "0.1.0"

[[bin]]
name = "esp32-heating-junkers"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name    = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }

esp-rtos = { version = "0.1.1", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6", "defmt"] }
esp-storage = {version = "0.8.0", features = ["defmt", "esp32c6"] }
embedded-storage = "0.3.1"

embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "dhcpv4-hostname",
  "dns",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-can = { version = "0.4.1" }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embedded-hal-bus = { version = "0.3.0" }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
esp-radio = { version = "0.16.0", features = [
  "defmt",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

base64         = {version = "0.22.1", default-features =  false, features = [] }
critical-section = "1.2.0"
rand_core       = "0.9.3"
static_cell      = "2.1.1"

mipidsi = { version = "0.9.0", default-features = false, features = ["batch", "defmt"], git="https://github.com/almindor/mipidsi", rev="6661d00" }
axs5106l = "0.1.0"

toml-cfg = "0.2.0"

jiff = {version="0.2.15", default-features = false, features = ["alloc", "static"] }
eg-seven-segment = "0.2.0"
embedded-charts = { version = "0.3.0", default-features = false, features = ["line", "no_std", "animations"] }

#reqwless = { version = "0.13", default-features = false, features = ["defmt", "esp-mbedtls"], git="https://github.com/ImplFerris/reqwless", branch="esp-hal-1.0.0" }
esp-mbedtls = { version="0.1", git="https://github.com/mbehr1/esp-mbedtls", features=["esp32c6", "async"], rev="f5a0cd56d0e018ae37490ebbf766ef7083967c71"}
esp-mbedtls-sys = { version="0.1", git="https://github.com/mbehr1/esp-mbedtls", features=["esp32c6"], rev="f5a0cd56d0e018ae37490ebbf766ef7083967c71"}

reqwless = { version = "0.13", default-features = false, features = ["defmt", "esp-mbedtls", "alloc"], git="https://github.com/mbehr1/reqwless", branch = "fix/defmt_esp-mbedtls"}
embedded-nal-async = "0.8.0"

serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
heapless = "0.9.1"
core-json = "0.4.0"
embedded-websocket = {version = "0.9.4", default-features = false }

nb ={ version = "1.1.0", features = ["defmt-0-3"]}

# Force reqwless to use your esp-mbedtls fork
[patch."https://github.com/esp-rs/esp-mbedtls"]
esp-mbedtls = { git = "https://github.com/mbehr1/esp-mbedtls", rev="f5a0cd56d0e018ae37490ebbf766ef7083967c71" }
esp-mbedtls-sys = { git = "https://github.com/mbehr1/esp-mbedtls", rev="f5a0cd56d0e018ae37490ebbf766ef7083967c71" }

[dev-dependencies]
embedded-test = { version = "0.7.0-alpha.3", git = "https://github.com/probe-rs/embedded-test", branch = "next", features = [
  "defmt",
  "embassy",
  "external-executor",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
